--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,5 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(PO_T
         main.cpp
         Location.cpp
-        Location.h
         Seat.cpp
-        Seat.h)
+        Zone.cpp)
